tests/fixtures/invalid/pow_float_bool_bytes.py
# Cannot call pow() with Float, Bool, Bytes
x = pow(1.0, True, b"hello")
